SUBDIRS = . batch

nobase_pkginclude_HEADERS =                                   \
	batch/jobeditor/rsjobeditorapplication.h                  \
	batch/jobeditor/ui/ArgumentsModel.h                       \
	batch/jobeditor/ui/ExtendedTabWidget.h                    \
	batch/jobeditor/ui/ExtendedTabWidgetContainerExtension.h  \
	batch/jobeditor/ui/ExtendedTabWidgetExtensionFactory.h    \
	batch/jobeditor/ui/ExtendedTabWidgetPlugin.h              \
	batch/jobeditor/ui/SettingWidget.h                        \
	batch/jobeditor/ui/SwitchWidget.h                         \
	batch/jobeditor/ui/TaskWidget.h